--- a/CSS/grid.html
+++ b/CSS/grid.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="grid.css">
-    <title>Document</title>
+    <title>CSS Grid</title>
 </head>
 <body>
 
@@ -18,6 +18,8 @@
         <div class="gridChild">6</div>
         <div class="gridChild">7</div>
         <div class="gridChild">8</div>
+        <div class="gridChild">9</div>
+        <div class="gridChild">10</div>
     </div>
 </body>
 </html>
