--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -7,7 +7,10 @@
     <title>AJAX</title>
 </head>
 <body>
-    <h1>Asynchronous Javascript</h1>
+    <h1>Asynchronous JS</h1>
+
+    <button id="requestBTN">Make a request</button>
+    
     <script src="scripts.js"></script>
 </body>
 </html>
