minor changes to code from last night

--- a/HTML/promises.html
+++ b/HTML/promises.html
@@ -7,6 +7,9 @@
     <title>Promises</title>
 </head>
 <body>
+    <h1>Javascript Object Notation</h1>
+    <h4>JSON</h4>
     
+    <script src="../Javascript/promises.js"></script>
 </body>
 </html>
