--- a/HTML/variations.html
+++ b/HTML/variations.html
@@ -54,6 +54,6 @@
         </table>
     </main>
     
-    <script src="../Javascript/variations.js"></script>
+    <script type="module" src="../Javascript/variations.js"></script>
 </body>
 </html>
